--- a/src/main/resources/assets/commun/lang/en_us.lang
+++ b/src/main/resources/assets/commun/lang/en_us.lang
@@ -1,12 +1,24 @@
-item.spinelle_rose_armorhelmet.name=Spinelle_rose Helmet
+item.pyrope_sword.name=Pyrope Sword
+tile.pyrope_ore.name=Pyrope Ore
 tile.spinelle_rose_block.name=Block of Spinelle_rose
 item.spinelle_rose_pickaxe.name=Spinelle_rose Pickaxe
-item.spinelle_rose_hoe.name=Spinelle_rose Hoe
+item.pyrope_axe.name=Pyrope Axe
+item.pyrope_hoe.name=Pyrope Hoe
+item.pyrope_armorboots.name=Pyrope Boots
+item.pyrope_pickaxe.name=Pyrope Pickaxe
+item.pyrope_armorbody.name=Pyrope Chestplate
+tile.spinelle_rose_ore.name=Spinelle_rose Ore
+item.spinelle_rose_armorhelmet.name=Spinelle_rose Helmet
+item.pyrope_shovel.name=Pyrope Shovel
+item.pyrope.name=Pyrope
 item.spinelle_rose_axe.name=Spinelle_rose Axe
+item.spinelle_rose_hoe.name=Spinelle_rose Hoe
 item.spinelle_rose_armorlegs.name=Spinelle_rose Leggings
+item.pyrope_armorhelmet.name=Pyrope Helmet
+item.pyrope_armorlegs.name=Pyrope Leggings
 item.spinelle_rose_sword.name=Spinelle_rose Sword
 item.spinelle_rose_armorbody.name=Spinelle_rose Chestplate
 item.spinelle_rose_armorboots.name=Spinelle_rose Boots
 item.spinelle_rose_shovel.name=Spinelle_rose Shovel
 item.spinelle_rose.name=Spinelle_rose
-tile.spinelle_rose_ore.name=Spinelle_rose Ore
+tile.pyrope_block.name=Block of Pyrope
